# simple-maze-rust

./: .gitignore  Cargo.toml  README.md
src/: console_game.rs  errors.rs  game.rs  game_value.rs  lib.rs  main.rs  map_value.rs  maze_map.rs  move_status.rs  player.rs  point.rs  random.rs
