[package]
name = "maze"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.10", optional = true, features = ["derive"] }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", optional = true }
shlex = { version = "1.3.0", optional = true }

[features]
default = ["console"]
console = ["rand_chacha", "clap", "shlex"]
clap = ["dep:clap"]
